_legacy/kind/prometheus-httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: __PROMETHEUS_ROUTE_NAME__
  namespace: __MONITORING_NAMESPACE__
spec:
  parentRefs:
    - name: __GATEWAY_API_GATEWAY_NAME__
      namespace: __GATEWAY_API_GATEWAY_NAMESPACE__
      sectionName: __GATEWAY_API_GATEWAY_LISTENER_NAME__
  hostnames:
    - "__PROMETHEUS_HOSTNAME__"
  rules:
    - backendRefs:
        - name: __PROMETHEUS_SERVICE_NAME__
          port: __PROMETHEUS_SERVICE_PORT__
